# CV-CourseWork

./: .gitignore  pyproject.toml  two-stage_detection.ipynb
